--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,7 @@ jobs:
       - name: Setup hugo
         uses: peaceiris/actions-hugo@v2
         with:
-#          hugo-version: "latest" # 可以修改为你使用的 Hugo 版本
-          hugo-version: "0.112.7" #
+          hugo-version: "latest"
           extended: true # 设置是否需要 extended 版本
 
       - name: Build
